# scl

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile
.github/workflows/: CI.yml
examples/: expressions.scl
pratt-derive/: Cargo.toml
pratt-derive/src/: lib.rs
src/: codegen.rs  compiler.rs  env.rs  error.rs  generics.rs  grammar.lalrpop  helpers.rs  lexer.rs  main.rs  new_lexer.rs  new_parser.rs  package.rs  parser.rs  pratt.rs  token.rs
src/ast/: mod.rs  parsed.rs  tajp.rs
src/cli/: mod.rs
src/package/: file.rs  mod.rs
src/tests/: mod.rs
src/tests/snapshots/: scl__tests__parse_expr@address_of.scl.snap  scl__tests__parse_expr@array_access.scl.snap  scl__tests__parse_expr@array_instantiation.scl.snap  scl__tests__parse_expr@block.scl.snap  scl__tests__parse_expr@block_with_if.scl.snap  scl__tests__parse_expr@cast.scl.snap  scl__tests__parse_expr@false_bool.scl.snap  scl__tests__parse_expr@identifier.scl.snap  scl__tests__parse_expr@if.scl.snap  scl__tests__parse_expr@member_access_and_deref.scl.snap  scl__tests__parse_expr@negative_number.scl.snap  scl__tests__parse_expr@number.scl.snap  scl__tests__parse_expr@operator_precedence.scl.snap  scl__tests__parse_expr@paren_precedence.scl.snap  scl__tests__parse_expr@proc_call.scl.snap  scl__tests__parse_expr@struct_instatiation.scl.snap  scl__tests__parse_expr@true_bool.scl.snap  scl__tests__parse_stmt@expr.scl.snap  (+94 more)
src/typechecker/: ast.rs  implementations.rs  mod.rs  module.rs  package.rs  proc.rs  scope.rs  stack.rs  tajp.rs
std/: scl.toml
std/src/: io.scl  lib.scl  math.scl  mem.scl
(+36 files in other folders)
