[package]
name = "scl"
version = "0.1.0"
edition = "2024"

[dependencies]
insta = { version = "1.43.1", features = ["glob"] }
miette = { version = "7.6.0", features = ["fancy"] }
nanoid = "0.4.0"
pratt-derive = { path = "pratt-derive" }
qbe = "2.5.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
